--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 </div>
-<div class="page-header-main headerBackground">
+<div class="page-header-main headerBackground d-none">
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto">
             <div class="content-header headerText">
