--- a/src/app/dashboard/statistics/statistics.component.html
+++ b/src/app/dashboard/statistics/statistics.component.html
@@ -21,7 +21,8 @@
                 <p> OPEN</p>
             </div>
             <div class="icon">
-                <i class="fas fa-shopping-cart"></i>
+                <!-- <i class="fas fa-shopping-cart"></i> -->
+                <i class="fas fa-folder-open"></i>
             </div>
         </div>
     </div>
@@ -65,7 +66,8 @@
                 <p>REOPEN</p>
             </div>
             <div class="icon">
-                <i class="fas fa-user-shield"></i>
+                <!-- <i class="fas fa-user-shield"></i> -->
+                <i class="fas fa-folder-open"></i>
             </div>
         </div>
     </div>
