--- a/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
+++ b/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
@@ -145,8 +145,7 @@
 
             <ng-container matColumnDef="interactionid">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction ID</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"><a
-                        routerLink="/interactions/edit-interactions/{{row?.id}}">{{row?.interactionId || row.transactionNumber}}</a> </td>
+                <td class="table-column-200" mat-cell *matCellDef="let row">{{row?.interactionId || row.transactionNumber}} </td>
             </ng-container>
             <ng-container matColumnDef="interactiontype">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Interaction Type</th>
