--- a/src/app/inventory/inventory-properties/inventory-properties.component.html
+++ b/src/app/inventory/inventory-properties/inventory-properties.component.html
@@ -240,17 +240,6 @@
                         <mat-label>Assign To</mat-label>
                         <input type="text" [readonly]="true" class="form-control" id="gstn"
                             [value]="resValue?.assignToName">
-                        <!-- <mat-select [disabled]="true" [dir]="langDir" formControlName="assignToId"
-                             class="form-control">
-                            <mat-option *ngFor="let member of teamMemberList" [value]="member.userId">
-                                {{member.userId}}
-                            </mat-option>
-                        </mat-select>
-                        <mat-error [dir]="langDir"
-                            *ngIf="addInventoryForm.get('assignToId').touched && addInventoryForm.get('assignToId').errors?.required"
-                            class="text-danger">
-                            Please select Assign to
-                        </mat-error> -->
                     </div>
                 </div>
 
@@ -287,7 +276,22 @@
                             formControlName="reopenCount">
                     </div>
                 </div>
-
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <mat-label>Source</mat-label>
+                        <mat-select [disabled]="true" formControlName="source" placeholder="Please select source"
+                            class="form-control">
+                            <mat-option *ngFor="let source of sourceList" [value]="source.name">
+                                {{source.name}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error [dir]="langDir"
+                            *ngIf="addInventoryForm.get('source').touched && addInventoryForm.get('source').errors?.required"
+                            class="text-danger">
+                            Please select source.
+                        </mat-error>
+                    </div>
+                </div>
                 <div class="col-md-12">
                     <div class="form-group">
                         <mat-label>Subject</mat-label>
