--- a/src/app/inventory/inventory-properties/inventory-properties.component.html
+++ b/src/app/inventory/inventory-properties/inventory-properties.component.html
@@ -292,6 +292,12 @@
                         </mat-error>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <mat-label>Telsima ID</mat-label>
+                        <input type="text" [readonly]="true" class="form-control">
+                    </div>
+                </div>
                 <div class="col-md-12">
                     <div class="form-group">
                         <mat-label>Subject</mat-label>
