--- a/src/app/dashboard/statistics/statistics.component.html
+++ b/src/app/dashboard/statistics/statistics.component.html
@@ -49,7 +49,8 @@
         </div>
     </div>
     <div class="col-lg-3 col-xs-6">
-        <div class="small-box bg-danger"  routerLink="/interactions">
+        <!-- <div class="small-box bg-danger"  [routerLink]="'/interactions'"> -->
+        <div class="small-box bg-danger"  [routerLink]="'/interactions'" [queryParams]="{status:3}"     > 
             <div class="inner">
                 <h3>{{dashboardStaticatics?.resolved}}</h3>
                 <p>RESOLVED</p>
@@ -60,7 +61,7 @@
         </div>
     </div>
     <div class="col-lg-3 col-xs-6">
-        <div class="small-box bg-yellow"  routerLink="/team">
+        <div class="small-box bg-yellow"  routerLink="/interactions">
             <div class="inner">
                 <h3>{{dashboardStaticatics?.reopen}}</h3>
                 <p>REOPEN</p>
