--- a/src/app/dashboard/sub-status-list/sub-status-list.component.html
+++ b/src/app/dashboard/sub-status-list/sub-status-list.component.html
@@ -9,8 +9,8 @@
       </div>
     </div>
     <div class="mat-elevation-z8">
-      <div class="table-responsive mainHeight">
-        <table [dir]="langDir" mat-table [dataSource]="dataSource" class="table table-bordered table-hover">
+      <div class="table-responsive ">
+        <table [dir]="langDir" mat-table [dataSource]="dataSource" class="mainHeight table table-bordered table-hover">
           <ng-container matColumnDef="total">
             <th class="table-column-200" mat-header-cell *matHeaderCellDef>Total</th>
             <td class="table-column-200" mat-cell *matCellDef="let row">{{row.total}}</td>
