--- a/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
+++ b/src/app/interaction-reports/interaction-report-list/interaction-report-list.component.html
@@ -36,23 +36,15 @@
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label for="search">Interaction ID</mat-label>
-                <div class="input-container">
+                <!-- <div class="input-container">
                     <span class="input-prefix">{{prefix}}</span>
                     <input type="text" [(ngModel)]="search" maxlength="20" class="form-control searchPrefix" id="search">
-                </div>
-                <!-- <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" -->
-                    <!-- id="search"> -->
+                </div> -->
+                <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control"
+                     id="search"> 
             </div>
         </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <mat-label>Type </mat-label>
-                <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
-                    placeholder="Select type" class="form-control">
-                    <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option>
-                </mat-select>
-            </div>
-        </div>
+        
         <div class="col-md-2">
             <div class="form-group">
                 <mat-label> Status </mat-label>
@@ -68,6 +60,15 @@
                 <mat-select [disabled]="!selectedStatus" [(ngModel)]="selectedSubStatus" placeholder="Select status"
                     class="form-control">
                     <mat-option [value]="status?.id" *ngFor="let status of subStatusList">{{status?.name}}</mat-option>
+                </mat-select>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <mat-label>Type </mat-label>
+                <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
+                    placeholder="Select type" class="form-control">
+                    <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option>
                 </mat-select>
             </div>
         </div>
@@ -139,8 +140,8 @@
 </div>
 <div class="table-responsive">
     <!-- {{this.dataSource | json}} -->
-    <div class="table table-bordered table-hover grid-height">
-        <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows
+    <div class="table table-bordered table-hover">
+        <table [dir]="langDir" mat-table [dataSource]="dataSource" class="table_height" matSort multiTemplateDataRows
             matSortActive="productName">
 
             <ng-container matColumnDef="interactionid">
@@ -218,33 +219,21 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell colspan="5" *matFooterCellDef>
+                <td mat-footer-cell colspan="9" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
                         [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
                     </mat-paginator>
                 </td>
             </ng-container>
-            <ng-container *ngIf="dataSource.count === 0" matColumnDef="no-records">
+            <!-- <ng-container *ngIf="dataSource.count === 0" matColumnDef="no-records">
                 <td mat-footer-cell colspan="5" *matFooterCellDef>
                     <b> {{'NO_DATA_FOUND' | translate}}</b>
                 </td>
-            </ng-container>
-            <ng-container matColumnDef="expandedDetail">
-                <td mat-cell *matCellDef="let inventoryObject" [attr.colspan]="displayedColumns.length">
-                    <ng-container *ngIf="inventoryObject == expandedElement">
-                        <div class="example-element-detail"
-                            [@detailExpand]="inventoryObject == expandedElement ? 'expanded' : 'collapsed'">
-                            <div class="inner-table mat-elevation-z8">
-                                <app-inventory-history-list [inventory]="inventoryObject">
-                                </app-inventory-history-list>
-                            </div>
-                        </div>
-                    </ng-container>
-                </td>
-            </ng-container>
+            </ng-container> -->
+            
             <tr *matNoDataRow>
-                <td colspan="9">
-                    <span class="p-4 mt-4">
+                <td colspan="6">
+                    <span class="py-4 my-5 d-block text-center">
                         <b> {{'NO_DATA_FOUND' | translate}}</b>
                     </span>
                 </td>
@@ -255,7 +244,6 @@
                 *matHeaderRowDef="['action-search','productName-search','stock-search','averagePurchasePrice-search','averageSalesPrice-search'];sticky: true"
                 class="example-second-header-row"> </tr> -->
             <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
     </div>
 </div>
