--- a/src/app/inventory/interaction-assignment/interaction-assignment.component.html
+++ b/src/app/inventory/interaction-assignment/interaction-assignment.component.html
@@ -95,8 +95,8 @@
                 </mat-select>
             </div>
         </div> -->
-        <div class="col-md-2">
-            <button type="button" (click)="searchList()" class="btn btn-success btn-md mx-2 button-margin"><i
+        <div class="col-md-3">
+            <button type="button" (click)="searchList()" class="btn btn-success btn-md mr-1 button-margin"><i
                     class="fas fa-save"></i>
                 Search</button>
             <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
@@ -140,7 +140,6 @@
                 class="fas fa-times-circle"></i>
             Clear </button>
     </div>
-    <!-- {{interactionIds | json}} -->
 </div>
 <div class="page-header-main headerBackground">
     <div class="row align-items-center justify-content-between">
@@ -153,14 +152,13 @@
 </div>
 <div class="table-responsive">
     <div class="table table-bordered table-hover grid-height">
-        <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows
-            matSortActive="productName">
+        <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
             <ng-container matColumnDef="action">
                 <!-- <th class="table-column-100" mat-header-cell *matHeaderCellDef="let data">
                     <mat-checkbox color="primary" name="enabled"  (change)="onSelectAll($event,dataSource)">Selcet All</mat-checkbox>
                  
                 </th> -->
-                <th class="table-column-100" mat-header-cell *matHeaderCellDef>Action              
+                <th class="table-column-100" mat-header-cell *matHeaderCellDef >Action              
                 </th>
                 <td class="table-column-100 text-center pad-12" mat-cell *matCellDef="let element">
                     <mat-checkbox color="primary" name="enabled" (change)="onChange(element?.id)"></mat-checkbox>
@@ -251,19 +249,6 @@
                     <b> {{'NO_DATA_FOUND' | translate}}</b>
                 </td>
             </ng-container>
-            <ng-container matColumnDef="expandedDetail">
-                <td mat-cell *matCellDef="let inventoryObject" [attr.colspan]="displayedColumns.length">
-                    <ng-container *ngIf="inventoryObject == expandedElement">
-                        <div class="example-element-detail"
-                            [@detailExpand]="inventoryObject == expandedElement ? 'expanded' : 'collapsed'">
-                            <div class="inner-table mat-elevation-z8">
-                                <app-inventory-history-list [inventory]="inventoryObject">
-                                </app-inventory-history-list>
-                            </div>
-                        </div>
-                    </ng-container>
-                </td>
-            </ng-container>
             <tr *matNoDataRow>
                 <td colspan="9">
                     <span class="p-4 mt-4">
@@ -273,11 +258,7 @@
             </tr>
             <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            <!-- <tr mat-header-row
-                *matHeaderRowDef="['action-search','productName-search','stock-search','averagePurchasePrice-search','averageSalesPrice-search'];sticky: true"
-                class="example-second-header-row"> </tr> -->
             <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
     </div>
 </div>
