--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -15,20 +15,54 @@
 <div class="loading-shade" *ngIf="dataSource.loading$ | async">
     <mat-spinner></mat-spinner>
 </div>
-<div class="mb-5">
+<div class="mb-1">
     <div class="row">
         <div class="col-12 mb-3">
             <div class="content-header headerBackground px-2">
                 <h1>Searching Filter</h1>
             </div>
         </div>
+        <div class="col-md-2">
+            <div class="form-group">
+              <mat-label for="fromDate">{{'FROM_DATE' | translate}} </mat-label>
+              <input class="form-control" [max]="currentDate" [(ngModel)]="fromDate"
+                [owlDateTimeTrigger]="fromDate1" [owlDateTime]="fromDate1" placeholder="{{'FROM_DATE' | translate}}">
+              <owl-date-time [pickerType]="'calendar'" #fromDate1></owl-date-time>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="form-group">
+              <mat-label for="toDate">{{'TO_DATE' | translate}} </mat-label>
+              <input class="form-control" id="toDate1" [max]="currentDate" [(ngModel)]="toDate"
+                [owlDateTimeTrigger]="toDate1" [owlDateTime]="toDate1" placeholder="{{'TO_DATE' | translate}}">
+              <owl-date-time [pickerType]="'calendar'" #toDate1></owl-date-time>
+            </div>
+          </div>
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label for="search">Interaction ID</mat-label>
-                <div class="input-container">
-                    <span class="input-prefix">{{prefix}}</span>
-                    <input type="text" [(ngModel)]="search" maxlength="20" class="form-control searchPrefix" id="search">
-                </div>
+                <!-- <div class="input-container">
+                    <span class="input-prefix">{{prefix}}</span> searchPrefix-->
+                    <input type="text" [(ngModel)]="search" maxlength="20" class="form-control " id="search">
+                <!-- </div> -->
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <mat-label> Status </mat-label>
+                <mat-select [(ngModel)]="selectedStatus" (selectionChange)="onStatusChange($event)"
+                    placeholder="Select status" class="form-control">
+                    <mat-option [value]="status?.id" *ngFor="let status of statusList">{{status?.name}}</mat-option>
+                </mat-select>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <mat-label> Sub Status </mat-label>
+                <mat-select [disabled]="!selectedStatus" [(ngModel)]="selectedSubStatus" placeholder="Select status"
+                    class="form-control">
+                    <mat-option [value]="status?.id" *ngFor="let status of subStatusList">{{status?.name}}</mat-option>
+                </mat-select>
             </div>
         </div>
         <div class="col-md-2">
@@ -39,24 +73,6 @@
                     <ng-container *ngFor="let type of typeList">
                         <mat-option *ngIf="type.name !='Email' " [value]="type?.id" >{{type?.name}}</mat-option>
                     </ng-container>
-                </mat-select>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="form-group">
-                <mat-label> Status </mat-label>
-                <mat-select [(ngModel)]="selectedStatus" (selectionChange)="onStatusChange($event)"
-                    placeholder="Select status" class="form-control">
-                    <mat-option [value]="status?.id" *ngFor="let status of statusList">{{status?.name}}</mat-option>
-                </mat-select>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="form-group">
-                <mat-label> Sub Status </mat-label>
-                <mat-select [disabled]="!selectedStatus" [(ngModel)]="selectedSubStatus" placeholder="Select status"
-                    class="form-control">
-                    <mat-option [value]="status?.id" *ngFor="let status of subStatusList">{{status?.name}}</mat-option>
                 </mat-select>
             </div>
         </div>
@@ -90,7 +106,7 @@
                 </mat-select>
             </div>
         </div>
-       
+      
         <div class="col-md-2">
             <div class="form-group">
                 <mat-label> Team </mat-label>
@@ -99,25 +115,16 @@
                 </mat-select>
             </div>
         </div>
-        <!-- <div class="col-md-2">
-            <div class="form-group">
-                <mat-label> Priority </mat-label>
-                <mat-select [(ngModel)]="selectedPriority" placeholder="Select priority" class="form-control">
-                    <mat-option [value]="priority?.id"
-                        *ngFor="let priority of priorityList">{{priority?.name}}</mat-option>
-                </mat-select>
-            </div>
-        </div> -->
-        <div class="col-md-4">
-            <button type="button" (click)="searchList()" class="btn btn-success btn-md mx-2 button-margin"><i
+        <div class="col-md-2">
+            <button type="button" (click)="searchList()" class="btn btn-success btn-sm mx-2 button-margin"><i
                     class="fas fa-save"></i>
                 Search</button>
-            <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
+            <button type="button" (click)="onClear();" class="btn btn-danger btn-sm button-margin"><i
                     class="fas fa-times-circle"></i>
                 Clear </button>
-                <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
+                <!-- <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
                     class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-                </button>
+                </button> -->
                 <!-- <button type="button" class="btn btn-warning btn-md button-margin ml-2"><i
                     class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
                 </button> -->
@@ -134,8 +141,8 @@
     </div>
 </div>
 <div class="table-responsive">
-    <div class="table table-bordered table-hover grid-height">
-        <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows
+    <div class="table table-bordered table-hover">
+        <table [dir]="langDir" mat-table [dataSource]="dataSource" class="table_height"  matSort multiTemplateDataRows
             matSortActive="productName">
             <ng-container matColumnDef="action">
                 <th class="table-column-100" mat-header-cell *matHeaderCellDef> Action
@@ -232,28 +239,15 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
-                <td mat-footer-cell colspan="5" *matFooterCellDef>
+                <td mat-footer-cell [attr.colspan]="displayedColumns.length" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"
-                        [dir]="langDir" [pageSizeOptions]="[10, 20, 30]">
+                        [dir]="langDir" [pageSizeOptions]="[10,20,30]">
                     </mat-paginator>
                 </td>
             </ng-container>
             <ng-container *ngIf="dataSource.count === 0" matColumnDef="no-records">
-                <td mat-footer-cell colspan="5" *matFooterCellDef>
+                <td mat-footer-cell colspan="15" *matFooterCellDef>
                     <b> {{'NO_DATA_FOUND' | translate}}</b>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="expandedDetail">
-                <td mat-cell *matCellDef="let inventoryObject" [attr.colspan]="displayedColumns.length">
-                    <ng-container *ngIf="inventoryObject == expandedElement">
-                        <div class="example-element-detail"
-                            [@detailExpand]="inventoryObject == expandedElement ? 'expanded' : 'collapsed'">
-                            <div class="inner-table mat-elevation-z8">
-                                <app-inventory-history-list [inventory]="inventoryObject">
-                                </app-inventory-history-list>
-                            </div>
-                        </div>
-                    </ng-container>
                 </td>
             </ng-container>
             <tr *matNoDataRow>
@@ -263,13 +257,9 @@
                     </span>
                 </td>
             </tr>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky:true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            <!-- <tr mat-header-row
-                *matHeaderRowDef="['action-search','productName-search','stock-search','averagePurchasePrice-search','averageSalesPrice-search'];sticky: true"
-                class="example-second-header-row"> </tr> -->
             <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
     </div>
 </div>
