--- a/src/app/inventory/my-interactions-list/my-interactions-list.component.html
+++ b/src/app/inventory/my-interactions-list/my-interactions-list.component.html
@@ -25,11 +25,11 @@
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label for="search">Interaction ID</mat-label>
-                <div class="input-container">
+                <!-- <div class="input-container">
                     <span class="input-prefix">{{prefix}}</span>
                     <input type="text" [(ngModel)]="search" maxlength="20" class="form-control searchPrefix" id="search">
-                </div>
-                <!-- <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search"> -->
+                </div> -->
+                <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search">
             </div>
         </div>
         <div class="col-md-2">
@@ -119,9 +119,9 @@
             <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
                     class="fas fa-times-circle"></i>
                 Clear </button>
-                <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
+                <!-- <button type="button" (click)="dowanloadList()" class="btn btn-warning btn-md button-margin ml-2"><i
                     class="fas fa-download"></i> {{'DOWNLOAD_REPORT' | translate}}
-                </button>
+                </button> -->
         </div>
     </div>
 </div>
@@ -135,8 +135,8 @@
     </div>
 </div>
 <div class="table-responsive">
-    <div class="table table-bordered table-hover grid-height">
-        <table [dir]="langDir" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows
+    <div class="table table-bordered table-hover">
+        <table [dir]="langDir" mat-table [dataSource]="dataSource" class="table_height" matSort multiTemplateDataRows
             matSortActive="productName">
             <ng-container matColumnDef="action">
                 <th class="table-column-100" mat-header-cell *matHeaderCellDef> Action
@@ -228,21 +228,8 @@
                 </td>
             </ng-container>
             <ng-container *ngIf="dataSource.count === 0" matColumnDef="no-records">
-                <td mat-footer-cell colspan="5" *matFooterCellDef>
+                <td mat-footer-cell colspan="15" *matFooterCellDef>
                     <b> {{'NO_DATA_FOUND' | translate}}</b>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="expandedDetail">
-                <td mat-cell *matCellDef="let inventoryObject" [attr.colspan]="displayedColumns.length">
-                    <ng-container *ngIf="inventoryObject == expandedElement">
-                        <div class="example-element-detail"
-                            [@detailExpand]="inventoryObject == expandedElement ? 'expanded' : 'collapsed'">
-                            <div class="inner-table mat-elevation-z8">
-                                <app-inventory-history-list [inventory]="inventoryObject">
-                                </app-inventory-history-list>
-                            </div>
-                        </div>
-                    </ng-container>
                 </td>
             </ng-container>
             <tr *matNoDataRow>
@@ -254,11 +241,7 @@
             </tr>
             <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            <!-- <tr mat-header-row
-                *matHeaderRowDef="['action-search','productName-search','stock-search','averagePurchasePrice-search','averageSalesPrice-search'];sticky: true"
-                class="example-second-header-row"> </tr> -->
             <tr mat-footer-row *matFooterRowDef="columnsToDisplay;sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
     </div>
 </div>
