--- a/src/app/inventory/team-interactions-list/team-interactions-list.component.html
+++ b/src/app/inventory/team-interactions-list/team-interactions-list.component.html
@@ -25,11 +25,11 @@
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label for="search">Interaction ID</mat-label>
-                <div class="input-container">
+                <!-- <div class="input-container">
                     <span class="input-prefix">{{prefix}}</span>
                     <input type="text" [(ngModel)]="search" maxlength="20" class="form-control searchPrefix" id="search">
-                </div>
-                <!-- <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search"> -->
+                </div> -->
+                <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search">
             </div>
         </div>
         <div class="col-md-2">
@@ -120,9 +120,9 @@
             <button type="button" (click)="onClear();" class="btn btn-danger btn-md button-margin"><i
                     class="fas fa-times-circle"></i>
                 Clear </button>
-            <button type="button" (click)="dowanloadList();" class="btn btn-warning btn-md button-margin ml-2"><i class="fas fa-download"></i>
+            <!-- <button type="button" (click)="dowanloadList();" class="btn btn-warning btn-md button-margin ml-2"><i class="fas fa-download"></i>
                 {{'DOWNLOAD_REPORT' | translate}}
-            </button>
+            </button> -->
         </div>
     </div>
 </div>
